Changes in README, minor fixes in the stylesheet and the script
Now the calculator stops functioning if it encounters a math error
(e.g. division by 0).

--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,8 @@ body {
 }
 
 .calculator-container {
-    max-width: 400px;
-    min-height: 70vh;
+    max-width: 90vw;
+    min-height: 90vh;
     padding: .5rem;
     flex: 1;
     border: 8px solid #2D1E2F;
